// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueStatusIcon renders "failed" state correctly 1`] = `
<div
  class="failed report-block-list-icon"
>
  <gl-icon-stub
    name="status_failed_borderless"
    size="24"
    variant="current"
  />
</div>
`;

exports[`IssueStatusIcon renders "neutral" state correctly 1`] = `
<div
  class="neutral report-block-list-icon"
>
  <gl-icon-stub
    name="dash"
    size="24"
    variant="current"
  />
</div>
`;

exports[`IssueStatusIcon renders "success" state correctly 1`] = `
<div
  class="report-block-list-icon success"
>
  <gl-icon-stub
    name="status_success_borderless"
    size="24"
    variant="current"
  />
</div>
`;
